--- a/static/css/audioplayer.css
+++ b/static/css/audioplayer.css
@@ -5,12 +5,13 @@
 .audioplayer
 {
     height: 2.5em;
-  color: #0C565F;
-  text-shadow: 1px 1px 0 #E7E7E7;
-  border: 1px solid #D5D5D5;
+   color: #FFFFFF;
+  
+  border: 1px solid #000000;
   position: relative;
   z-index: 1;
-  background: rgba(223, 222, 222, 0.76);
+  background: rgba(51, 53, 61, 1);
+
 }
 
 
@@ -68,7 +69,7 @@
               height: 0;
               border: 0.5em solid transparent;
               border-right: none;
-              border-left-color: #0C565F;
+              border-left-color: #FFC21C;
               content: '';
               position: absolute;
               top: 50%;
@@ -166,7 +167,7 @@
         }
         .audioplayer-bar-played
         {
-            background: #0C565F;
+            background: #FFC21C;
             z-index: 2;
         }
 
@@ -200,7 +201,7 @@
             {
                 width: 0.313em; /* 5 */
                 height: 0.375em; /* 6 */
-                background-color: #0C565F;
+                background-color: #FFC21C;
                 display: block;
                 position: relative;
                 z-index: 1;
@@ -219,7 +220,7 @@
                     height: 0;
                     border: 0.5em solid transparent; /* 8 */
                     border-left: none;
-                    border-right-color: #0C565F;
+                    border-right-color: #FFC21C;
                     z-index: 2;
                     top: 50%;
                     right: -0.25em;
@@ -230,7 +231,7 @@
                     /* "volume" icon by Nicolas Gallagher, http://nicolasgallagher.com/pure-css-gui-icons */
                     width: 0.313em; /* 5 */
                     height: 0.313em; /* 5 */
-                    border: 0.25em double #0C565F; /* 4 */
+                    border: 0.25em double #FFC21C; /* 4 */
                     border-width: 0.25em 0.25em 0 0; /* 4 */
                     left: 0.563em; /* 9 */
                     top: -0.063em; /* 1 */
@@ -270,7 +271,7 @@
             {
                 width: 40%;
                 height: 80%;
-                background-color: #222;
+                background-color: #A3A3A3;
                 cursor: pointer;
                 position: relative;
                 z-index: 1;
@@ -283,7 +284,7 @@
                     position: absolute;
                     bottom: 0;
                     left: 0;
-                    background: #007fd1;
+                    background: #FFC21C;
                 }
         .audioplayer-novolume .audioplayer-volume
         {
