--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -347,15 +347,15 @@
 
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <div class="episode-title">
-            It's at the Tate but is it art?
+            {{topic_name}}
           </div>
           
-          <p>How does the art world decide if an object is art or not?</p>
+          <p>{{topic_description}}</p>
         </div>
 
         <div class="col-lg-12">
           <audio controls>
-            <source src="http://upload.wikimedia.org/wikipedia/commons/0/03/Linus-linux.ogg" type="audio/ogg">
+            <source src="{{audio}}" type="audio/ogg">
             Your browser does not support the audio element.
           </audio>
 
@@ -418,15 +418,16 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6 text-center">
-          <div id="contribute-left">
-          <h2> Contribute </h2>
-          </div>
+          
         </div>
       
       
 
 
             <div class="col-md-6">
+              <div id="contribute-left">
+          <h2> Contribute </h2>
+          </div>
               <div class="vertical-line">
               <p>
                 Are you an academic or PhD student who is interested in reaching out to the public? Do you feel that your research is too interesting to be bound to academic journals, and that it must be released into the wild?</p>
