added the narrator, changed transcript.txt which needs fixing

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -351,7 +351,9 @@
           </div>
 
           <p>{{topic_description}}</p>
+          <p>Narrated by Vidish Athavale</p>
         </div>
+
 
         <div class="col-lg-12">
           <audio controls>
@@ -382,7 +384,7 @@
 
 
     <div class="comments-button">
-      <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Comments</button>
+      <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Discussion</button>
       <div id="demo" class="collapse">
         <div id="disqus_thread"></div>
                   <script type="text/javascript">
@@ -400,7 +402,6 @@
                    <div class="disqus-collapse" style="display:none;">Collapse Text</div>
     </div>
       </div>
-
     <div class="transcript-button">
       <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#transcript">Transcript</button>
       <div id="transcript" class="collapse">
