--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -447,8 +447,9 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
+          <div class="contact-title">
           <h2>Contact</h2>
-          
+          </div>
         </div>
       </div>
       <div class="row">
