--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -405,7 +405,7 @@
     <div class="transcript-button">
       <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#transcript">Transcript</button>
       <div id="transcript" class="collapse">
-      {{transcript}}
+      {{transcript|safe}}
       </div>
      </div>
 
