testing thumbnail again

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -6,8 +6,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="fdsfdsfsd">
-  <meta name="author" content="hhhhhf">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <meta property="og:site_name" content="Knowitwall"/>
+  <meta property="og:title" content="Your awesome title goes here, about 90 characters in length."/>
+  <meta property="og:image" content="/static/Images/Mehdi.jpg">
+  <meta property="og:url" content="https://jeremiestest.herokuapp.com/">
 
   <title>Know it Wall</title>
 
