yet another thumbnail test

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -10,8 +10,12 @@
   <meta name="author" content="">
   <meta property="og:site_name" content="Knowitwall"/>
   <meta property="og:title" content="Your awesome title goes here, about 90 characters in length."/>
+  <meta property="og:description" content="Compelling description of URL that is about 300 characters in length."/>
   <meta property="og:image" content="/static/Images/Mehdi.jpg">
   <meta property="og:url" content="https://jeremiestest.herokuapp.com/">
+  <meta property="og:type" content="blog"/>
+
+
 
   <title>Know it Wall</title>
 
