another thumbnail test

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -6,14 +6,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="">
+  <meta name="description" content="Knowitwall is a platform for short audiodocumentaries from academia">
   <meta name="author" content="">
-  <meta property="og:site_name" content="Knowitwall"/>
-  <meta property="og:title" content="Your awesome title goes here, about 90 characters in length."/>
-  <meta property="og:description" content="Compelling description of URL that is about 300 characters in length."/>
-  <meta property="og:image" content="/static/Images/Mehdi.jpg">
-  <meta property="og:url" content="https://jeremiestest.herokuapp.com/">
-  <meta property="og:type" content="blog"/>
+  <link rel="image_src" href="/static/Images/Mehdi.jpg" />
 
 
 
