--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -408,7 +408,67 @@
     <div class="transcript-button">
       <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#transcript">Transcript</button>
       <div id="transcript" class="collapse">
-      {{transcript|safe}}
+
+        <h3> It's  at Tate but is it art?</h3>
+        <p>
+
+        Once upon a time there was an emperor who was so fond of dressing up that he cared about doing little else. One day, a self-
+        proclaimed artisan arrived in the empire, claiming to have discovered a cloth that was invisible to those who were fools and unfit
+        for their jobs. After paying several bags of gold for a suit of clothes, the emperor impatiently waited to see it. Fearing to be a
+        fool and unfit to be emperor, however, he asked his most intelligent and qualified servants to check how the artisan's work was
+        progressing. None could see the cloth but all pretended to be able to, out of fear to be regarded as fools and unfit for their jobs.
+        When the suit of clothes was finally ready, the emperor pretended to be amazed by its beauty and went on a procession to show it
+        off to his people. Rumours about the magical powers of the emperor's new clothes had spread quickly. 'Do you see how the light
+        blues vividly emanate from the cloth?', asked one citizen to another. The crowd pretended to be amazed by the beauty of the
+        clothes, too - until a child pointed to the emperor and cried: 'But he's got nothing on! Out of the blue, everyone started
+        laughing and crying: 'The emperor's got no clothes!'
+        </p>
+
+        <p>
+        To many people, today's art is like a retelling of Hans Christian Andersen's 19th-century tale The Emperor's New Clothes. Consider
+        British artist Martin Creed and his installation Work No. 227, which consists merely of an empty room in which lights go on and off
+        at 5-second intervals. Work No. 227 was on display at the 2001 Turner Prize exhibition at Tate Britain, a prize which Creed was
+        nominated for and ended up winning. So, not only did Creed exhibit his work at one of the world's most prestigious art museums, but
+        he also won, in recognition of it, a kind of Nobel Prize in the visual arts for Brits under 50. The tabloids were appalled and so
+        was the general public: how could that possibly be art? In fact, the controversy that has surrounded the Turner Prize is such that
+        even street artist Banksy had his say on the matter, having stencilled 'Mind the Crap' on the steps of Tate Britain on the occasion
+        of the 2002 exhibition.
+        Understood as a retelling of The Emperor's New Clothes, this tale's charlatan is Martin Creed, someone who seeks fame and fortune
+        at any cost; the emperor is Sir Nicholas Serota, the all-powerful head of Tate; the magical cloth is Work No. 227, art that is
+        invisible to fools; the emperor's servants are the judges of the Turner Prize, incapable of putting into question Creed's work out
+        of fear of being perceived as unqualified to be judges; and the child is the general public, naively crying 'But that's not art!'
+        </p>
+        <p>
+        Let's take a step back though. There is no doubt that Work No. 227, valued at around £110,000, is highly regarded in Tate circles,
+        having recently been bought for its collection. But what reasons could there be to consider Work No. 227 to be art? What is it that
+        makes it art? The problem of whether Work No. 227 is art is not one that only philosophers, alone in their ivory towers, should
+        care about finding a solution to. Tate is a public institution, an institution whose main sponsor happens to be the British
+        government and hence the UK taxpayer. So let's ask again: what definition of art could possibly make it art?
+        </p>
+        <p>
+        Nothing more and nothing less than the most influential modern definition of art: the so-called institutional definition of art.
+        According to the institutional definition, something becomes art in virtue of having art status conferred on it by members of a
+        social institution, the artworld. What makes Work No. 227 art is that representatives of the artworld - in this case, the judges of
+        the Turner Prize - have conferred art status on it by exhibiting it at Tate. Now, whether Work No. 227 is good art or not is a
+        different question, and one that the institutional definition is deliberately silent about. All the definition tells us is that it
+        is art, whether good or bad. The judges of the Turner Prize presumably think that it is good art, but what was puzzling about it in
+        the first place was how it could be art at all - and now we know. Case closed in favour of the judges of the Turner Prize, right?
+        <p>
+        Well, not quite. The institutional definition faces a serious problem: a dilemma. In philosophy and logic, a dilemma is a problem
+        that starts with a choice between two possibilities and then shows that each of them leads to the same bad conclusion. Think about
+        it: do representatives of the artworld have good reasons to confer art status on Work No. 227? There are only two obvious
+        possibilities: either they do have good reasons or they don't. So far so good. Now consider the first possibility, that they have
+        good reasons. If they have good reasons to confer art status on it, then it's those reasons that ground the claim that it's art.
+        But, in that case, the conferral of art status is irrelevant - it's the good reasons behind the conferral, not the conferral
+        itself, that make Work No. 227 art. Now consider the second possibility, that they don't have good reasons to confer art status on
+        it. If they don't have good reasons, then we should doubt their authority when they tell us that it's art. In this case, the
+        conferral of art status is also irrelevant - it does nothing to convince us that Work No. 227 is art. Therefore, in either
+        scenario, the conferral of art status is irrelevant for whether Work No. 227 is art. Martin Creed's work is at Tate, but it looks
+        like the emperor is still hanging out with no clothes on.
+        </p>
+
+
+
       </div>
      </div>
 
