--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -366,7 +366,7 @@
 
         <div class="author-bio">
             <div class="col-md-3">
-              <img class="img-responsive" src="{{author_image}}" alt = "author image">
+              <img class="clip-circle"class="img-responsive" src="{{author_image}}" style="max-height:140px;" alt = "author image">
             </div>
             <div class="col-md-3">
               <h2 style="text-align:right;"> {{author_name}} </h2>
@@ -384,7 +384,7 @@
 
 
     <div class="comments-button">
-      <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Discussion</button>
+      <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo"> Join the Discussion</button>
       <div id="demo" class="collapse">
         <div id="disqus_thread"></div>
                   <script type="text/javascript">
@@ -403,7 +403,7 @@
     </div>
       </div>
     <div class="transcript-button">
-      <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#transcript">Transcript</button>
+      <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#transcript">Read the Transcript</button>
       <div id="transcript" class="collapse">
       {{transcript}}
       </div>
@@ -418,14 +418,12 @@
   <section id="contribute">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 text-center">
-
-        </div>
+        
 
 
 
 
-            <div class="col-md-6">
+            <div class="col-md-8 col-md-offset-2">
               <div id="contribute-left">
           <h2> Contribute </h2>
           </div>
@@ -445,6 +443,7 @@
 
   <!-- Contact Section -->
   <section id="contact">
+
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -522,8 +521,11 @@
     <div class="footer-below">
       <div class="container">
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-lg-6">
             Copyright &copy; Know it Wall 2015
+          </div>
+          <div class="col-lg-6">
+            Terms and Conditions
           </div>
         </div>
       </div>
