changed all the texts

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -281,7 +281,7 @@
 
 
           <div id="tagline-1">
-            THE BEST MINDS IN ONE PLACE
+            Building knowedge one brick at a time
           </div>
 
         </div>
@@ -322,10 +322,7 @@
 
             <div class="col-md-6">
               <div class="vertical-line">
-              <p>We are a group of fun loving academics who want to capture that pub chat experience for the entire world. Get an insight into the exciting world of academic research with our short 'audio-documentaries' on physics, history, philosophy, and many more subjects.</p>
-            </br>
-
-              <p>All audio-docs were written by experts in the subject at hand (PhD students, lecturers, professors) at some of the UK's top universities. They provide first hand accounts of their discipline, and show us what makes it great.</p>
+              <p>We’re a bunch of young academics trying to change the way academia interacts with the public. *If you have more interests than you can keep track of*, you’re in the right place! We make short documentaries, written by academics, for the enjoyment of everyone else. From space to spider monkeys, pyramids to Pythagoras – there’s no limit to what you could be learning.</p>
 
             </div>
       </div>
@@ -355,6 +352,7 @@
 
           <p>{{topic_description}}</p>
           <p>Narrated by Vidish Athavale</p>
+          <p>Music by Addam Farmer, Debbie Miller and Mark Petrie.</p>
         </div>
 
 
@@ -430,7 +428,7 @@
   <section id="contribute">
     <div class="container">
       <div class="row">
-        
+
 
 
 
@@ -441,10 +439,7 @@
           </div>
               <div class="vertical-line">
               <p>
-                Are you an academic or PhD student who is interested in reaching out to the public? Do you feel that your research is too interesting to be bound to academic journals, and that it must be released into the wild?</p>
-            </br>
-
-              <p>If so, then please get in touch. Fill in the contact form below with your name, email, and field of research/PhD topic and we will get back to you with more details.</p>
+                If you think your research is too interesting to be confined to academic circles, then just get in touch! Our community of academics spans PhDs in mathematics to lecturers in philosophy – there’s really no subject we’re not interested in. Drop us a line below with your details, institution and area of research.</p>
 
             </div>
       </div>
