Contact form updated

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -350,9 +350,9 @@
             {{topic_name}}
           </div>
 
-          <p>{{topic_description}}</p>
-          <p>Narrated by Vidish Athavale</p>
-          <p>Music by Addam Farmer, Debbie Miller and Mark Petrie.</p>
+          <p style="font-size:1.6em;">{{topic_description}}</p>
+          <p style="font-style:italic;">Narrated by Vidish Athavale</p>
+          <p style="font-style:italic;">Music by Addam Farmer, Debbie Miller and Mark Petrie.</p>
         </div>
 
 
