--- a/static/css/knowitwallredux.css
+++ b/static/css/knowitwallredux.css
@@ -165,11 +165,11 @@ header .intro-text .skills {
 #tagline-2 {
 
 text-align: left;
-font-size:3em;
- color:#fff; 
- padding-left: 1%;
- margin-left: 4%;
- margin-top: 20px; 
+  font-size: 2.8em;
+  color: #fff;
+  padding-left: 1%;
+  margin-left: 4%;
+  margin-top: 20px; 
 }
 
 .navbar-default .navbar-nav>li>a {
@@ -399,6 +399,7 @@ section {
 section h2 {
     margin: 0;
     font-size: 3em;
+      text-align: center;
 }
 
 section.success {
@@ -420,7 +421,7 @@ section.success {
 @media (min-width: 1200px) {
 .col-lg-12 {
   width: 100%;
-  padding: 50px;
+  padding: 0 0 50px 0;
 }
 
 }
@@ -665,3 +666,14 @@ audio, canvas, progress, video {
 }
  }
 
+}
+ .form-control::-moz-placeholder {
+color: #CD9E1E;
+opacity: 1;
+ }
+   .form-control:-ms-input-placeholder {
+   color: #CD9E1E;
+ }
+ .form-control::-webkit-input-placeholder {
+ color: #CD9E1E;
+ }
