--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -288,7 +288,7 @@
           <div class="col-md-8">
 
           <div id="tagline-2">
-            Let world renowned researchers inspire you through short audio documentaries
+            Let top researchers inspire you through short audio documentaries
           </div>
 
         </div>
@@ -322,7 +322,9 @@
 
             <div class="col-md-6">
               <div class="vertical-line">
-              <p>We’re a bunch of young academics trying to change the way academia interacts with the public. *If you have more interests than you can keep track of*, you’re in the right place! We make short documentaries, written by academics, for the enjoyment of everyone else. From space to spider monkeys, pyramids to Pythagoras – there’s no limit to what you could be learning.</p>
+              <p>We’re a bunch of young academics trying to change the way academia interacts with the public. If you have more interests than you can keep track of, you’re in the right place!</p>
+              <br>
+              <p>We make short audio documentaries, written by academics, for the enjoyment of everyone else. From space to spider monkeys, pyramids to Pythagoras – there’s no limit to what you could be learning.</p>
 
             </div>
       </div>
