--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -10,7 +10,7 @@
   <meta name="author" content="">
   <link rel="image_src" href="/static/Images/Mehdi.jpg" />
 
-
+<!-- pens -->
 
   <title>Know it Wall</title>
 
