put the audio path to server/audio/itsatate.mp3 so it works now.

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -281,7 +281,7 @@
 
 
           <div id="tagline-1">
-            Building knowedge one brick at a time
+            Building knowledge one brick at a time
           </div>
 
         </div>
@@ -353,8 +353,8 @@
           </div>
 
           <p style="font-size:1.6em;">{{topic_description}}</p>
-          <p style="font-style:italic;">Narrated by Vidish Athavale</p>
-          <p style="font-style:italic;">Music by Addam Farmer, Debbie Miller and Mark Petrie.</p>
+          <p style="font-style:italic;">narrated by Vidish Athavale</p>
+          <p style="font-style:italic;">music by Addam Farmer, Debbie Miller and Mark Petrie</p>
         </div>
 
 
