fixing audioplayer stuff that didnt work with ogg and wav

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -281,7 +281,7 @@
 
 
           <div id="tagline-1">
-            Building knowledge one brick at a time
+            Building knowedge one brick at a time
           </div>
 
         </div>
@@ -353,16 +353,14 @@
           </div>
 
           <p style="font-size:1.6em;">{{topic_description}}</p>
-          <p style="font-style:italic;">narrated by Vidish Athavale</p>
-          <p style="font-style:italic;">music by Addam Farmer, Debbie Miller and Mark Petrie</p>
+          <p style="font-style:italic;">Narrated by Vidish Athavale</p>
+          <p style="font-style:italic;">Music by Addam Farmer, Debbie Miller and Mark Petrie.</p>
         </div>
 
 
         <div class="col-lg-12">
           <audio controls>
-            <source src="{{audio_mp3}}" type="audio/mpeg">
-            <source src="{{audio_wav}}" type="audio/wav">
-            <source src="{{audio_ogg}}" type="audio/ogg">
+            <source src="{{audio}}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
 
