replaced excalamation marks with periods

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -322,7 +322,7 @@
 
             <div class="col-md-6">
               <div class="vertical-line">
-              <p>We’re a bunch of young academics trying to change the way academia interacts with the public. If you have more interests than you can keep track of, you’re in the right place!</p>
+              <p>We’re a bunch of young academics trying to change the way academia interacts with the public. If you have more interests than you can keep track of, you’re in the right place.</p>
               <br>
               <p>We make short audio documentaries, written by academics, for the enjoyment of everyone else. From space to spider monkeys, pyramids to Pythagoras – there’s no limit to what you could be learning.</p>
 
@@ -441,7 +441,7 @@
           </div>
               <div class="vertical-line">
               <p>
-                If you think your research is too interesting to be confined to academic circles, then just get in touch! Our community of academics spans PhDs in mathematics to lecturers in philosophy – there’s really no subject we’re not interested in. Drop us a line below with your details, institution and area of research.</p>
+                If you think your research is too interesting to be confined to academic circles, then just get in touch. Our community of academics spans PhDs in mathematics to lecturers in philosophy – there’s really no subject we’re not interested in. Drop us a line below with your details, institution and area of research.</p>
 
             </div>
       </div>
