--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -360,7 +360,7 @@
 
         <div class="col-lg-12">
           <audio controls>
-            <source src="{{audio_mp3}}" type="audio/mpeg">
+            <source src="{{audio}}" type="audio/mpeg">
             Your browser does not support the audio element.
           </audio>
 
