audioformats is now properly set up

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -360,7 +360,7 @@
 
         <div class="col-lg-12">
           <audio controls>
-            <source src="{{audio_mp}}" type="audio/mpeg">
+            <source src="{{audio_mp3}}" type="audio/mpeg">
             <source src="{{audio_wav}}" type="audio/wav">
             <source src="{{audio_ogg}}" type="audio/ogg">
             Your browser does not support the audio element.
