changed audioformats locally because merging the audioformats branch didnt work

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -360,7 +360,9 @@
 
         <div class="col-lg-12">
           <audio controls>
-            <source src="{{audio}}" type="audio/mpeg">
+            <source src="{{audio_mp3}}" type="audio/mpeg">
+            <source src="{{audio_ogg}}" type="audio/ogg">
+            <source src="{{audio_wav}}" type="audio/wav">
             Your browser does not support the audio element.
           </audio>
 
