--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -372,7 +372,7 @@
           
             <div class="col-md-3">
 
-              <img class="clip-circle"class="img-responsive" src="{{author_image}}" style="max-height:140px;" alt = "author image">
+              <img class="clip-circle"class="img-responsive" src="{{author_image}}"  alt = "author image">
             
           </div>
             <div class="col-md-3">
