--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -3,6 +3,19 @@
 
 <head>
 
+  <!-- google analytics -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-62559170-1', 'auto');
+  ga('send', 'pageview');
+
+  </script>
+
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -371,11 +384,11 @@
         <!-- Author -->
 
         <div class="author-bio">
-          
+
             <div class="col-md-3">
 
               <img class="clip-circle"class="img-responsive" src="{{author_image}}"  alt = "author image">
-            
+
           </div>
             <div class="col-md-3">
               <div class="author-name">
