didnt actually modify knowitwall.html

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Knowitwall is a platform for short audiodocumentaries from academia">
   <meta name="author" content="">
-  <link rel="image_src" href="/static/Images/Mehdi.jpg" />
+  <link rel="icon" href="/static/Images/Mehdi.jpg" type="image/gif" sizes="16x16">
 
 <!-- pens -->
 
