--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -9,10 +9,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Knowitwall is a platform for short audiodocumentaries from academia">
+  <meta name="description" content="Knowitwall: Building knowledge one brick at a time">
   <meta name="author" content="">
+  <meta property="og:image" content="/static/Images/Mehdi.jpg" />
+  <meta property="og:title" content="Knowitwall: Building knowledge one brick at a time" />
+  <meta property="og:description" content="If you have more interests than you can keep track of, you’re in the right place. Know It Wall makes short audio documentaries, written by academics, for the enjoyment of everyone." />
   <link rel="icon" href="/static/Images/Mehdi.jpg" type="image/gif" sizes="16x16">
-
 <!-- pens -->
 
   <title>Know it Wall</title>
