--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -9,7 +9,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Knowitwall: Building knowledge one brick at a time">
+  <meta name="description" content="Know it wall">
   <meta name="author" content="">
   <meta property="og:image" content="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" />
   <meta property="og:title" content="Knowitwall: Building knowledge one brick at a time" />
