modified thumbnail description for facebook metatag

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Know it wall">
   <meta name="author" content="">
   <meta property="og:image" content="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" />
-  <meta property="og:title" content="Knowitwall: Building knowledge one brick at a time" />
+  <meta property="og:title" content="Know it wall" />
   <meta property="og:description" content="If you have more interests than you can keep track of, you’re in the right place. Know It Wall makes short audio documentaries, written by academics, for the enjoyment of everyone." />
   <meta property="og:url" content="http://knowitwall.com/" />
   <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.ico" type="image/gif" sizes="16x16">
