changed favicon to .png

--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="Know It Wall" />
   <meta property="og:description" content="If you have more interests than you can keep track of, you’re in the right place. Know It Wall makes short audio documentaries, written by academics, for the enjoyment of everyone." />
   <meta property="og:url" content="http://knowitwall.com/" />
-  <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.ico" type="image/gif" sizes="16x16">
+  <link rel="icon" href="http://knowitwall.com/static/Images/KIW-thumbnail_logo.png" type="image/gif" sizes="16x16">
 <!-- pens -->
 
   <title>Know it Wall</title>
