--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -42,7 +42,7 @@
   <![endif]-->
 
 
-  <!-- google analytics -->
+  <!-- google analytics for jeremie.coullon@gmail.com -->
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -51,7 +51,17 @@
 
   ga('create', 'UA-62559170-1', 'auto');
   ga('send', 'pageview');
+  </script>
 
+  <!-- google analytics for theknowitwall@gmail.com -->
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-62617437-1', 'auto');
+  ga('send', 'pageview');
   </script>
 </head>
 
