--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -478,7 +478,7 @@
           </div>
               <div class="vertical-line">
               <p>
-                If you think your research is too interesting to be confined to academic circles, then just get in touch. The process is simple: you send the text, we do the rest. Our community of academics spans PhDs in mathematics to lecturers in philosophy – there’s really no subject we’re not interested in. Drop us a line below with your details, institution and area of research.</p>
+                If you think your research is too interesting to be confined to academic circles, then just get in touch. Our community of academics spans PhDs in mathematics to lecturers in philosophy – there’s really no subject we’re not interested in. The process is simple: you send the text, we do the rest. So drop us a line below with your details, institution and area of research.</p>
             </div>
       </div>
     </div>
