--- a/templates/knowitwall.html
+++ b/templates/knowitwall.html
@@ -378,10 +378,10 @@
 
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <div class="episode-title">
-            {{topic_name}}
+            {{audiodocs[0].topic_name}}
           </div>
 
-          <p style="font-size:1.6em;">{{topic_description}}</p>
+          <p style="font-size:1.6em;">{{audiodocs[0].topic_description}}</p>
           <p style="font-style:italic;">narrated by Vidish Athavale</p>
           <p style="font-style:italic;">music by Addam Farmer, Debbie Miller and Mark Petrie</p>
         </div>
@@ -389,9 +389,9 @@
 
         <div class="col-lg-12">
           <audio controls>
-            <source src="{{audio_mp3}}" type="audio/mpeg">
-            <source src="{{audio_ogg}}" type="audio/ogg">
-            <source src="{{audio_wav}}" type="audio/wav">
+            <source src="{{audiodocs[0].audio_mp3}}" type="audio/mpeg">
+            <source src="{{audiodocs[0].audio_ogg}}" type="audio/ogg">
+            <source src="{{audiodocs[0].audio_wav}}" type="audio/wav">
             Your browser does not support the audio element.
           </audio>
 
@@ -402,19 +402,19 @@
 
             <div class="col-md-3">
 
-              <img class="clip-circle"class="img-responsive" src="{{author_image}}"  alt = "author image">
+              <img class="clip-circle"class="img-responsive" src="{{audiodocs[0].author_image}}"  alt = "author image">
 
           </div>
             <div class="col-md-3">
               <div class="author-name">
-              <h2 style="text-align:right;"> {{author_name}} </h2>
+              <h2 style="text-align:right;"> {{ audiodocs[0].author_name }} </h2>
             </div>
           </div>
 
 
             <div class="col-md-6">
               <div class="vertical-line">
-              <p> {{ author_bio }} </p>
+              <p> {{ audiodocs[0].author_bio }} </p>
               </div>
             </div>
           </div>
@@ -444,7 +444,7 @@
     <div class="transcript-button">
       <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#transcript">Read the Transcript</button>
       <div id="transcript" class="collapse">
-        {{transcript | safe}}
+        {{ audiodocs[0].transcript | safe }}
       </div>
      </div>
 
